updates for new address

--- a/about-us.html
+++ b/about-us.html
@@ -53,18 +53,20 @@
             including inpatient hospitals, rehabilitation facilities, The MD Board of Childcare, outpatient
             mental health clinics, and in private mental health practice.
           </p><p>
-            Nicole is a Licensed Clinical Social Worker (LCSW) who works with children over the age of 8
+            Nicole is a Licensed Clinical Social Worker (LCSW-C) who works with children over the age of 10
             years old, adults, and families. She believes in the ability to create change in one's life in
             the context of a therapeutic relationship in an environment of safety and trust which she is
             committed to providing.
           </p><p>
             Nicole is an active member of the <a href="http://socialworkers.org/" title="NASW">NASW</a>,
+            <a href="http://www.aed.org/" title="AED">AED</a>, 
             <a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>, 
             <a href="http://www.napw.com/" title="NAPW">NAPW</a> ​​and is highly committed to her professional
-            development. As a result, she participates regularly in training and Continuing Education
-            courses at both the local and national level. Nicole is recognized as a 
-            <a href="https://www.giveanhour.org/">Give an Hour</a> program clinician for military personnel.
-            She possesses a specialization in cognitive behavioral therapy and geriatrics. Nicole is also a 
+            development. As a result, she participates regularly in Continuing Education courses and trainings
+            at both the local and national level. Nicole is recognized as a 
+            <a href="https://www.giveanhour.org/">Give an Hour</a> program clinician for military personnel
+            and their families. She possesses a specialization in cognitive behavioral therapy and eating
+            disorders. Nicole is also a
             <a href="http://www.iaedp.com/overview%204%20Certification%20Overview.htm" title="CEDP">Certified
             Eating Disorder Specialist</a> (CEDS), as well as a Certified Clinical Supervisor who provide​s
             supervision for other clinicians seeking advanced clinical licensure.​
@@ -186,7 +188,10 @@
     </main>
     <footer class="footer">
       <div class="container wrap text-center">
-          <p class="text-muted">Northeastern&nbsp;Counseling&nbsp;Services | 5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050</p>
+        <p class="text-muted">
+          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+        </p>
       </div>
     </footer>
   <!-- Latest compiled and minified JavaScript -->
