--- a/common-questions.html
+++ b/common-questions.html
@@ -48,14 +48,14 @@
           current concerns, as well as additional background information that will help us to better 
           understand your needs.
         </p>
-        <h2>Why Counseling?</h2>
+        <h2>Why counseling?</h2>
         <p>
           Clients come to see us for many different reasons, such as feeling depressed or anxious, a 
           friend or family concern, eating and body image problems, sexual assault, self-esteem concerns, 
-          academic /employment stress, etc…Clients sometimes worry that their problem isn't, "Big Enough" 
+          academic /employment stress, and more. Clients sometimes worry that their problem isn't, "Big Enough" 
           to see a therapist, but we are here to support you at whatever place you are at.
         </p>
-        <h2>What is Psychotherapy?</h2>
+        <h2>What is psychotherapy?</h2>
         <p>
           Psychotherapy is intended for people who have certain problems or symptoms and who are 
           distressed or demoralized by these issues and concerns. Individuals who seek psychotherapy may 
@@ -65,8 +65,8 @@
           etc…These feelings can encompass loss of confidence or self-esteem, guilt or shame, isolation and 
           alienation, particularly when help is not available from those to whom these individuals ordinarily 
           look for support or understanding. Psychotherapy is foremost a collaboration between therapist and 
-          client where the interests, needs, and welfare of the client guide the relationship. The 
-          psychotherapist must establish a psychologically safe and respectful environment for each client, 
+          client where the interests, needs, and welfare of the client guide the relationship.
+          The psychotherapist must establish a psychologically safe and respectful environment for each client, 
           wherein anything can be said and any feeling experienced. It is customary for psychotherapists to 
           discuss and reflect a client's primary issue and concerns during therapy sessions. The therapist 
           focuses on understanding the patient's personal history; the meaning each patient makes of their 
@@ -96,28 +96,26 @@
           Every therapy session is unique and caters to each individual and their specific goals. It is standard
           for therapists to discuss the primary issues and concerns in your life during therapy sessions. It is
           important to process what has been discussed and integrate it into your life between sessions. Sessions
-          can be short term or long term addressing more complex issues or ongoing personal growth.
+          can range from short term to long term, and are dependent on the needs of the client. If long term 
+          sessions are agreed upon, they generally address more complex issues or the exploration of ongoing
+          personal growth.
         </p>
         <h2>Is medication a substitution for therapy?</h2>
         <p>
-          In some cases a combination of medication and therapy is the right course of action. Working with your
-          medical doctor you can determine what's best for you. It is well established that the long-term
+          In some cases a combination of medication and therapy is the right course of action. While working with
+          your medical doctor, you can determine what's best for you. It is well established that the long-term
           solution to mental and emotional problems and the pain they cause cannot be solved solely by
           medication. Instead of just treating the symptom, therapy addresses the cause of our distress and the
           behavior patterns that curb our progress.
-        </p>
-        <h2>First Contact</h2>
-        <p>
-          We find it often helpful to speak briefly on the phone to get a sense of what your needs are. We are 
-          also comfortable being contacted by email. Please see the
-          <a href="contact-us.html" title="Contact Us">Contact Us</a> section of this website for an 
-          email address and information about communication via email.
         </p>
       </div>
     </main>
     <footer class="footer">
       <div class="container wrap text-center">
-          <p class="text-muted">Northeastern&nbsp;Counseling&nbsp;Services | 5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050</p>
+        <p class="text-muted">
+          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+          </p>
       </div>
     </footer>
   <!-- Latest compiled and minified JavaScript -->
