--- a/confidentiality.html
+++ b/confidentiality.html
@@ -44,23 +44,26 @@
         <h1>Confidentiality</h1>
         <p>
           Northeastern Counseling Services maintains strict standards of confidentiality. The law protects
-          the relationship between a client and a psychotherapist. We will not release any records of your
-          counseling or discuss your case with anyone unless you give us your explicit written consent.
-          Exceptions to this include:
+          the relationship between a client and a psychotherapist. We will not release any records from your
+          counseling experience at our practice, or discuss your case with anyone unless you give us your
+          explicit written consent. Exceptions to this include:
         </p>
         <ul>
-          <li>Suspected child abuse or dependent adult or elder abuse for which I am required by law to
-            report this to the ​appropriate authorities immediately.</li>
-          <li>If a client is threatening serious bodily harm to another person(s). I must notify the police
+          <li>Suspected child abuse, dependent adult abuse or elder abuse for which we are required by law to
+            report any evidence or suspicion this to the ​appropriate authorities immediately.</li>
+          <li>If a client is threatening serious bodily harm to another person(s). We must notify the police
             and the intended victim.</li>
-          <li>If a client intends to harm himself or herself, I will make every effort to enlist their
+          <li>If a client intends to harm himself or herself, we will make every effort to enlist their
             cooperation in ensuring their safety.</li>
         </ul>
       </div>
     </main>
     <footer class="footer">
       <div class="container wrap text-center">
-          <p class="text-muted">Northeastern&nbsp;Counseling&nbsp;Services | 5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050</p>
+        <p class="text-muted">
+          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+        </p>
       </div>
     </footer>
   <!-- Latest compiled and minified JavaScript -->
