--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
     </main>
     <footer class="footer">
       <div class="container wrap text-center">
-          <p class="text-muted">Northeastern&nbsp;Counseling&nbsp;Services | 5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050</p>
+        <p class="text-muted">
+          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+        </p>
       </div>
     </footer>
   <!-- Latest compiled and minified JavaScript -->
