--- a/rates-and-insurance.html
+++ b/rates-and-insurance.html
@@ -42,12 +42,6 @@
     <main>
       <div class="container">
         <h1>Rates and Insurance</h1>
-        <h2>Reduced Fee</h2>
-        <p>
-          Reduced fee services are available on a limited basis.  Please contact us for further
-          information.
-        </p>
-        <h2>Insurance</h2>
         <p>
           Services may be covered in full or in part by your health insurance or employee benefit plan.
           Please check your coverage carefully by asking the following questions:
@@ -62,12 +56,13 @@
         </ul>
         <h2>Payment</h2>
         <p>
-          Cash, checks and other payment choices are accepted for payment.
+          Cash, checks and credit cards are accepted forms of payment.
         </p>
         <h2>Cancellation Policy</h2>
         <p>
-          If you do not show up for your scheduled appointment, and you have not notified us at least 48
-          hours in advance, you will be required to pay the full cost of the session.
+          We kindly request that you notify us at least 24 hours in advance of a projected missed appointment.
+          If there is a situation of multiple late cancellations, or "no shows", it is at the therapists
+          discretion to charge the client for the full cost of the session.
         </p>
         <h2>Contact Us</h2>
         <p>
@@ -77,7 +72,10 @@
     </main>
     <footer class="footer">
       <div class="container wrap text-center">
-          <p class="text-muted">Northeastern&nbsp;Counseling&nbsp;Services | 5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050</p>
+        <p class="text-muted">
+          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+        </p>
       </div>
     </footer>
   <!-- Latest compiled and minified JavaScript -->
