--- a/resources.html
+++ b/resources.html
@@ -42,254 +42,35 @@
     <main>
       <div class="container">
         <h1>Resources</h1>
-        <em>The following links are listed to provide you with
-        additional online mental health care information and counseling resources.</em>
-
-<h2>Addiction and Recovery</h2>
-<p><a href="http://www.alcoholics-anonymous.org/">Alcoholics Anonymous</a><br>
-<a href="http://www.recoverybroadcastnetwork.net/AA.html">Alcoholics Anonymous Recovery Resources</a><br>
-<a href="http://netaddiction.com/">Center for On-Line Addiction</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Substance+Abuse/Addiction&amp;Topic=Substance+Abuse/Addiction">SAMHSA's
-Substance Abuse/Addiction</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Treatment+and+Recovery&amp;Topic=Treatment+and+Recovery">SAMHSA's
-Treatment and Recovery</a><br>
-<a href="http://www.well.com/user/woa/">Web of Addictions</a><br></p>
-
-<h2>Anxiety Disorders</h2>
-<p><a href="http://www.apa.org/pubinfo/panic.html">Answers to
-Your Questions <span class=GramE>About</span> Panic Disorder&nbsp;</a><br>
-<a href="http://www.ncptsd.va.gov/">National Center for PTSD</a><br>
-<a href="http://www.miminc.org/aboutocic.asp">Obsessive Compulsive Information
-Center</a><br></p>
-
-<h2>Associations &amp; Institutes</h2>
-<p><a href="http://www.aacap.org/">American Academy of Child
-&amp; Adolescent Psychiatry</a><br>
-<a href="http://www.aamft.org/">American Association for Marriage and Family
-Therapy</a><br>
-<a href="http://www.counseling.org/">American Counseling Association</a><br>
-<a href="http://www.psych.org/">American Psychiatric Association</a><br>
-<a href="http://www.apa.org/">American Psychological Association</a><br>
-<a href="http://www.psychologicalscience.org/">American Psychological Society</a><br>
-<a href="http://www.cmha.ca/">Canadian Mental Health Association</a><br>
-<a href="http://mentalhealth.samhsa.gov/cmhs/">Center for Mental Health
-Services</a><br>
-<a href="http://www.nimh.nih.gov/">National Institute of Mental Health</a><br>
-<a href="http://www.nmha.org/">National Mental Health Association</a><br>
-<a href="http://www.samhsa.gov/">Substance Abuse and Mental Health Services
-Administration</a><br></p>
-
-<h2>Attention-Deficit Hyperactivity Disorder</h2>
-<p><a href="http://www.add.org/">ADDA - Attention Deficit
-Disorder Association</a><br>
-<a
-href="http://www.nimh.nih.gov/health/topics/attention-deficit-hyperactivity-disorder-adhd/index.shtml">Attention-Deficit
-Hyperactivity Disorder, NIH</a><br>
-<a href="http://borntoexplore.org/">Born to Explore: The Other Side of ADD/ADHD</a><br></p>
-
-<h2>Child Abuse and Domestic Violence</h2>
-<p><a href="http://www.childhelp.org/"><span class=SpellE>Childhelp</span>
-USA</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Children+and+Families&amp;Topic=Children+and+Families">SAMHSA's
-Children and Families</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Children+and+Families&amp;Topic=Children+and+Families">SAMHSA's&nbsp;</a><br><a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Protection+%26+Advocacy&amp;Topic=Protection+%26+Advocacy">Protection
-and Advocacy</a><br>
-<a href="http://www.apa.org/pubinfo/mem.html">Questions and Answers about
-Memories of Childhood Abuse</a><br>
-<a href="http://www.ndvh.org/">The National Domestic Violence Hotline Website</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Women%2c+Violence+and+Trauma&amp;Topic=Women%2c+Violence+and+Trauma">Women,
-Violence and Trauma</a><br></p>
-
-<h2>Chronic Fatigue</h2>
-<p><a href="http://www.cdc.gov/cfs/">Chronic Fatigue Syndrome</a><br></p>
-
-<h2>Depression</h2>
-<p><a href="http://www.pendulum.org/">Bipolar Disorder News -
-Pendulum.org</a><br>
-<a href="http://www.apa.org/pubinfo/depression.html">Depression and How Therapy
-Can Help</a><br>
-<a href="http://www.depression-screening.org/">Depression Screening</a><br>
-<a href="http://depression.realage.com/">Depression Test, Symptoms of
-Depression, Signs of Depression</a><br></p>
-
-
-<h2>Developmental Disorders</h2>
-<p><a
-href="http://www.righthealth.com/health/asperger%E2%80%99s%20disorder-s">Asperger's
-Disorder</a><br>
-<a href="http://spinwarp.ucsd.edu/NeuroWeb/"><span class=SpellE>NeuroWeb</span></a><br>
-<a href="http://www.med.yale.edu/chldstdy/autism/">Pervasive Developmental
-Disorders</a><br></p>
-
-<h2>Diagnosis</h2>
-<p><a
-href="http://www.behavenet.com/capsules/disorders/dsm4classification.htm">DSM-IV-TR:
-Diagnoses and Criteria</a><br></p>
-
-
-<h2>Dissociation and Traumatic Stress</h2>
-<p><a href="http://www.sidran.org/">Sidran Foundation Home Page</a><br></p>
-
-<h2>Eating Disorders</h2>
-<p><a
-href="http://www.eatright.org/cps/rde/xchg/ada/hs.xsl/index.html">American
-Dietetic Association</a><br>
-<a href="http://www.something-fishy.org/">Something Fishy</a><br>
-<a href="http://www.nationaleatingdisorders.org/">National Eating Disorders
-Association</a><br></p>
-
-<h2>Journals &amp; Magazines</h2>
-<p><a
-href="http://www.addwarehouse.com/shopsite_sc/store/html/product311.html">ADHD
-Report</a><br>
-<a href="http://www.tandf.co.uk/journals/titles/10615806.html">Anxiety, Stress
-and Coping</a><br>
-<a href="http://www.sagepub.com/journalsProdDesc.nav?prodId=Journal200822">Autism</a><br>
-<a href="http://www.sagepub.com/journalsProdDesc.nav?prodId=Journal200979">Childhood</a><br>
-<a href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-CH.html">Contemporary
-Hypnosis</a><br>
-<a href="http://www.sagepub.com/journalsProdDesc.nav?prodId=Journal201266">Dementia</a><br>
-<a href="http://www3.interscience.wiley.com/cgi-bin/jhome/38924">Depression and
-Anxiety</a><br>
-<a
-href="http://www.springer.com/west/home/generic/search/results?SGWID=4-40109-22-33175263-0">Dreaming</a><br>
-<a href="http://www.informaworld.com/smpp/content~content=a713780430~db=all">Drug
-and Alcohol Review</a><br>
-<a href="http://www3.interscience.wiley.com/cgi-bin/jhome/6124">Dyslexia</a><br>
-<a href="http://www.tandf.co.uk/journals/titles/03004430.html">Early Child
-Development and Care</a><br>
-<a href="http://www.tandf.co.uk/journals/titles/10640266.asp">Eating Disorders</a><br>
-<a href="http://www.washington.edu/oea/">Educational Assessment</a><br>
-<a href="http://www.springer.com/medicine/psychiatry/journal/10899">Journal of
-Gambling Studies</a><br>
-<a href="http://www.springerlink.com/content/?k=journal+of+happiness">Journal
-of Happiness Studies</a><br>
-<a href="http://www.tandf.co.uk/journals/titles/13607863.asp">Journal of Mental
-Health and Aging</a><br>
-<a href="http://www.tandf.co.uk/journals/titles/0092623X.html">Journal of Sex
-&amp; Marital Therapy</a><br>
-<a href="http://www.humankinetics.com/JSEP/journalAbout.cfm">Journal of Sport
-and Exercise Psychology</a><br>
-<a href="http://www.elsevier.com/inca/publications/store/5/2/5/4/7/5/">Journal
-of Substance Abuse Treatment</a><br>
-<a href="http://www.tandf.co.uk/journals/pp/01690965.html">Language and
-Cognitive Processes</a><br>
-<a
-href="http://www.haworthpress.com/store/product.asp?sku=J457&amp;sid=UF1W2ENR4X0T9PNQDRQWWJCBFTSF7WJ0&amp;">Loss,
-Grief &amp; Care</a><br>
-<a href="http://www3.interscience.wiley.com/cgi-bin/jhome/38853">Mental
-Retardation and Developmental Disabilities&nbsp;</a><br>
-<a href="http://www.leaonline.com/loi/ms">Metaphor and Symbol</a><br>
-<a href="http://www.tandf.co.uk/journals/titles/09602011.asp">Neuropsychological
-Rehabilitation</a><br>
-<a
-href="http://www.informaworld.com/smpp/quicksearch~db=all?quickterm=parenting&amp;searchtype=&amp;x=0&amp;y=0">Parenting</a><br>
-<a href="http://www.blackwellpublishing.com/journal.asp?ref=1350-4126">Personal
-Relationships</a><br>
-<a href="http://www.elsevier.com/inca/publications/store/6/0/3/">Personality
-and Individual Differences</a><br>
-<a href="http://pb.rcpsych.org/">Psychiatric Bulletin</a><br>
-<a href="http://www.apa.org/journals/men.html">Psychology of Men &amp;
-Masculinity</a><br>
-<a href="http://www.psychologytoday.com/">Psychology Today</a><br>
-<a href="http://www3.interscience.wiley.com/cgi-bin/jhome/76509996">Stress and
-Health</a><br>
-<a
-href="http://www.psychoanalysisarena.com/journals/studies-in-gender-and-sexuality-1524-0657">Studies
-in Gender and Sexuality</a><br>
-<a href="http://www.springerlink.com/content/?k=substance+abuse">Substance
-Abuse</a><br>
-<a
-href="http://www.guilford.com/cgi-bin/cartscript.cgi?page=periodicals/jnsl.htm&amp;cart_id=871636.9316">Suicide
-and Life-Threatening Behavior</a><br>
-<a href="http://www.sagepub.com/journalsProdDesc.nav?prodId=Journal200782">Trauma,
-Violence &amp; Abuse</a><br></p>
-
-<h2>Medications</h2>
-<p><a href="http://www.mothernature.com/shop/brands/index.cfm">Drug
-Interactions, Alternative, <span class=SpellE>MotherNature</span></a><br>
-<a href="http://www.druginteractioncenter.org/?gclid=CMe25vuI6o8CFQGRPAodihUxEA">Drug
-Interactions, DIRECT</a><br>
-<a href="http://www.nlm.nih.gov/medlineplus/mplusdictionary.html">Medical
-Dictionary</a><br>
-<a href="http://www.fda.gov/cder/drug/default.htm">Medications, FDA</a><br>
-<a href="http://www.mentalhealth.com/p30.html">Medication, Internet Mental
-Health</a><br>
-<a href="http://www.pdrhealth.com/home/home.aspx">Medications, PDR</a><br>
-<a href="http://www.nlm.nih.gov/medlineplus/druginformation.html">Medline,
-Comparison</a><br>
-<a
-href="http://ods.od.nih.gov/Health_information/Vitamin_and_Mineral_Supplement_Fact_Sheets.aspx">Multivitamins</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Psychiatry+and+Psychology&amp;Topic=Psychiatry+and+Psychology">SAMHSA's
-Psychiatry and Psychology</a><br></p>
-
-<h2>Mental Health Care General Links</h2>
-<p><a href="http://www.goodtherapy.org/">GoodTherapy.org</a><br>
-<a
-href="http://www.healthyminds.org/Document-Library/Brochure-Library/brochures.aspx">Internet
-Mental Health Counselor</a><br>
-<a href="http://www.healthyminds.org/letstalkfacts.cfm">Let's Talk Facts, APA</a><br>
-<a href="http://www.cmellc.com/">Mental Health <span class=SpellE>InfoSource</span></a><br>
-<a href="http://www.mentalhelp.net/">Mental Health Net</a><br>
-<a href="http://mentalhealth.about.com/">Mental Health Counselor Resources,
-About.com</a><br>
-<a href="http://mentalhelp.net/">Mental Help Net</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Mental+Illnesses/Disorders&amp;Topic=Mental+Illnesses/Disorders">Mental
-Illnesses/Disorders</a><br>
-<a href="http://psychcentral.com/">PsychCentral.com</a><br>
-<a href="http://www.med.umich.edu/1libr/1libr.htm">University of Michigan
-Health Topics A to Z</a><br>
-<a href="http://caphis.mlanet.org/consumer/index.html">Web Sites You Can Trust,
-Medical Library Association</a><br></p>
-
-<h2>Personality Disorders</h2>
-<p><a href="http://www.mentalhelp.net/poc/center_index.php?id=8">Mental
-Help Net - Personality Disorders</a><br>
-<a href="http://www.focusas.com/PersonalityDisorders.html">Personality
-Disorders - Focus Adolescent Counselor Services</a><br></p>
-
-<h2>Suicide Awareness and Hotlines</h2>
-<p><a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Suicide&amp;Topic=Suicide">SAMHSA's
-Suicide</a><br>
-<a href="http://www.save.org/"><span class=SpellE>Suicide</span> Awareness
-Voices of Education</a><br>
-<a href="http://www.metanoia.org/suicide/">Suicide: Read This First</a><br></p>
-
-<h2>Additional Mental Health Care &amp; Counseling Resources</h2>
-<p><a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=Disaster/Trauma&amp;Topic=Disaster/Trauma">Disaster/Trauma</a><br>
-<a
-href="http://mentalhealth.samhsa.gov/links/default2.asp?ID=HIV/AIDS&amp;Topic=HIV/AIDS">HIV/AIDS</a><br>
-<a href="http://www.thefinebalance.com/"><span class=SpellE>InfoQuit</span>
-Smoking</a><br>
-<a href="http://www.psychwww.com/books/interp/toc.htm">Interpretation of Dreams</a><br>
-<a href="http://www.advisorteam.com/user/kts.asp"><span class=SpellE>Keirsey</span>
-(Myers-Briggs) Temperament Sorter</a><br>
-<a href="http://www.nutrasanus.com/">NutraSanus.com Natural Health Supplements
-Guide</a><br>
-<a href="http://www.menopause.realage.com/">Signs of Menopause, Symptoms of
-Menopause</a><br></p>
-
-<p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
-
-
+        <p>
+          <em>The following links are listed to provide you with additional online mental health care information
+          and counseling resources.
+          </em>
         </p>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container wrap text-center">
-          <p class="text-muted">Northeastern&nbsp;Counseling&nbsp;Services | 5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050</p>
-      </div>
-    </footer>
+        <p>
+          <a href="http://www.nationaleatingdisorders.org/">National Eating Disorders Association</a><br>
+          <ul>
+            <li><a href="https://www.nationaleatingdisorders.org/warning-signs-and-symptoms">Warning signs and symptoms</a></li>
+            <li><a href="https://www.nationaleatingdisorders.org/screening-tool">Screening Tool</a></li>
+            <li><a href="https://www.nationaleatingdisorders.org/learn/help/caregivers">How to help a loved one</a></li>
+            <li><a href="https://www.nationaleatingdisorders.org/sharing-concerns-about-your-eating-behaviors">How do I open up in treatment?</a></li>
+            <li><a href="https://www.nationaleatingdisorders.org/evaluation-and-diagnosis">What's the first step</a></li>
+            <li><a href="https://www.nationaleatingdisorders.org/treatment">What can I expect</a></li>
+            <li><a href="https://www.nationaleatingdisorders.org/sites/default/files/nedaw18/1.%20ParentToolkit.pdf">Parent toolkit</a></li>
+          </ul>
+        </p>
+        <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
+      </p>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container wrap text-center">
+      <p class="text-muted">
+        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+      </p>
+    </div>
+  </footer>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
