--- a/resources.html
+++ b/resources.html
@@ -48,6 +48,16 @@
           </em>
         </p>
         <p>
+          Suicide Prevention Resources
+          <ul>
+            <li><a href="http://www.suicidepreventionlifeline.org">National Suicide Prevention Lifeline</a>
+              (<a href="tel:8002738255">1-800-273-TALK(8255)</a> Available 24 hours everyday)<br></li>
+            <li><a href="https://www.sprc.org">Suicide Prevention Resource Center</a><br></li>
+            <li><a href="https://www.samhsa.gov/suicide-prevention">SAMHSA- Suicide Prevention</a><br></li>
+            <li><a href="https://www.nami.org/Get-Involved/Awareness-Events/Suicide-Prevention-Awareness-Month">National Alliance on Mental Health- Suicide Prevention</a><br></li>
+          </ul>
+        </p>
+        <p>
           <a href="http://www.nationaleatingdisorders.org/">National Eating Disorders Association</a><br>
           <ul>
             <li><a href="https://www.nationaleatingdisorders.org/warning-signs-and-symptoms">Warning signs and symptoms</a></li>
@@ -59,7 +69,19 @@
             <li><a href="https://www.nationaleatingdisorders.org/sites/default/files/nedaw18/1.%20ParentToolkit.pdf">Parent toolkit</a></li>
           </ul>
         </p>
-        <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
+        <p>
+            Anxiety and Depression Resources
+            <ul>
+              <li><a href="https://www.nami.org">National Alliance on Mental Illness</a>
+                (<a href="tel:8009506264">1-800-950-NAMI(6264)</a>)<br></li>
+              <li><a href="https://members.adaa.org/page/FATMain">Anxiety and Depression Association of America</a>
+                (<a href="tel:2404851001">1-240-485-1001</a>)<br></li>
+              <li><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health</a>
+                (<a href="tel:8666156464">1-866-615-6464</a>)<br></li>
+              </li>
+            </ul>
+          </p>
+          <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
       </p>
     </div>
   </main>
