Add meta descriptions and alt tags removed google verification

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--
-  <meta name="description" content="Northeastern Counseling Services provides cognitive behavior health therapy and specializes in treatment of eating disorders." />
   <meta name="keywords" content"counseling, therapist, psychologist, social work, couples, mental, marriage, family, grief, eating disorder, binge, anorexia, bulimia, cognitive behavioral therapy" />
   -->
   <meta name="msvalidate.01" content="9BF1CCD70CD1124D689D3B47D9AE4BFF" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Northeastern Counseling Services provides cognitive behavior health therapy
+    and specializes in treatment of eating disorders." />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
