--- a/rates-and-insurance.html
+++ b/rates-and-insurance.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Northeastern Counseling Services accepts many insurance providers." />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
@@ -18,7 +19,7 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
+          <a class="navbar-brand" href="index.html"><img class="hidden-xs" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
