--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
+  <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
   <div>
@@ -76,6 +76,9 @@
             In her spare time, she enjoys reading, crafting, volleyball, coaching 
             <a href="https://www.girlsontherun.org/" title="Girls on the Run">Girls on the Run</a> and spending
             time with family.
+          </p>
+          <p>
+            <a href="https://www.psychologytoday.com/profile/205856" target="_top" title="Verified by Psychology Today" class="sx-verified-seal"></a>
           </p>
         </section>
         <section>
