--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
+  <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
   <div>
@@ -72,18 +72,30 @@
           </ul>
         </p>
         <p>
-            Anxiety and Depression Resources
-            <ul>
-              <li><a href="https://www.nami.org">National Alliance on Mental Illness</a>
-                (<a href="tel:8009506264">1-800-950-NAMI(6264)</a>)<br></li>
-              <li><a href="https://members.adaa.org/page/FATMain">Anxiety and Depression Association of America</a>
-                (<a href="tel:2404851001">1-240-485-1001</a>)<br></li>
-              <li><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health</a>
-                (<a href="tel:8666156464">1-866-615-6464</a>)<br></li>
-              </li>
-            </ul>
-          </p>
-          <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
+          Other Eating Disorder Resources
+          <ul>
+            <li><a href="http://www.aedweb.org">Academy for Eating Disorders</a></li>
+            <li><a href="http://www.anad.org">National Association of Anorexia Nervosa & Related Disorders</a></li>
+            <li><a href="http://www.bedaonline.com">Binge Eating Disorder Association</a></li>
+            <li><a href="http://www.eatingdisorderscoalition.org">Eating Disorders Coalition</a></li>
+            <li><a href="http://www.mengetedstoo.co.uk/">Men Get Eating Disorders Too</a></li>
+            <li><a href="http://www.nationaleatingdisorders.org/">National Eating Disorder Association</a></li>
+            <li><a href="https://www.eatingdisorderhope.com">Eating Disorder Hope</a></li>
+          </ul>
+        </p>
+        <p>
+          Anxiety and Depression Resources
+          <ul>
+            <li><a href="https://www.nami.org">National Alliance on Mental Illness</a>
+              (<a href="tel:8009506264">1-800-950-NAMI(6264)</a>)<br></li>
+            <li><a href="https://members.adaa.org/page/FATMain">Anxiety and Depression Association of America</a>
+              (<a href="tel:2404851001">1-240-485-1001</a>)<br></li>
+            <li><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health</a>
+              (<a href="tel:8666156464">1-866-615-6464</a>)<br></li>
+            </li>
+          </ul>
+        </p>
+        <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
       </p>
     </div>
   </main>
