Updated to bootstrap 4

--- a/rates-and-insurance.html
+++ b/rates-and-insurance.html
@@ -5,82 +5,74 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services accepts many insurance providers." />
+  <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
-  <div>
-    <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="common-questions.html">Common Questions</a></li>
-            <li><a href="confidentiality.html">Confidentiality</a></li>
-            <li class="active"><a href="rates-and-insurance.html">Rates and Insurance</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
-          <ul>
-        </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light navbar-custom shadow-sm">
+      <a class="navbar-brand" href="index.html"><img class="d-none d-sm-inline-block" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-main">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
+          <li class="nav-item"><a class="nav-link" href="confidentiality.html">Confidentiality</a></li>
+          <li class="nav-item active"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance<span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
+          <li class="nav-item"><a class="nav-link" href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
+        </ul>
       </div>
     </nav>
-    </header>
-    <main>
-      <div class="container">
-        <h1>Rates and Insurance</h1>
-        <p>
-          Services may be covered in full or in part by your health insurance or employee benefit plan.
-          Please check your coverage carefully by asking the following questions:
-        </p>
-        <ul>
-          <li>Do I have mental health benefits?</li>
-          <li>What is my deductible and has it been met?</li>
-          <li>How many sessions per calendar year does my plan cover?</li>
-          <li>How much does my plan cover for an out-of-network provider?</li>
-          <li>What is the coverage amount per therapy session?</li>
-          <li>Is approval required from my primary care physician?</li>
-        </ul>
-        <h2>Payment</h2>
-        <p>
-          Cash, checks and credit cards are accepted forms of payment.
-        </p>
-        <h2>Cancellation Policy</h2>
-        <p>
-          We kindly request that you notify us at least 24 hours in advance of a projected missed appointment.
-          If there is a situation of multiple late cancellations, or "no shows", it is at the therapists
-          discretion to charge the client for the full cost of the session.
-        </p>
-        <h2>Contact Us</h2>
-        <p>
-          Questions?  Request an appointment?  Please <a href="contact-us.html" title="Contact Us">contact us</a>.
-        </p>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container wrap text-center">
-        <p class="text-muted">
-          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
-        </p>
-      </div>
-    </footer>
+  </header>
+  <main>
+    <div class="container">
+      <h1>Rates and Insurance</h1>
+      <p>
+        Services may be covered in full or in part by your health insurance or employee benefit plan.
+        Please check your coverage carefully by asking the following questions:
+      </p>
+      <ul>
+        <li>Do I have mental health benefits?</li>
+        <li>What is my deductible and has it been met?</li>
+        <li>How many sessions per calendar year does my plan cover?</li>
+        <li>How much does my plan cover for an out-of-network provider?</li>
+        <li>What is the coverage amount per therapy session?</li>
+        <li>Is approval required from my primary care physician?</li>
+      </ul>
+      <h2>Payment</h2>
+      <p>
+        Cash, checks and credit cards are accepted forms of payment.
+      </p>
+      <h2>Cancellation Policy</h2>
+      <p>
+        We kindly request that you notify us at least 24 hours in advance of a projected missed appointment.
+        If there is a situation of multiple late cancellations, or "no shows", it is at the therapists
+        discretion to charge the client for the full cost of the session.
+      </p>
+      <h2>Contact Us</h2>
+      <p>
+        Questions?  Request an appointment?  Please <a href="contact-us.html" title="Contact Us">contact us</a>.
+      </p>
+    </div>
+  </main>
+  <footer class="footer bg-light">
+    <div class="container wrap text-center">
+      <p class="text-muted-custom">
+        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+      </p>
+    </div>
+  </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
