--- a/confidentiality.html
+++ b/confidentiality.html
@@ -5,70 +5,62 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services values your confidentiality." />
+  <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
-  <div>
-    <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="common-questions.html">Common Questions</a></li>
-            <li class="active"><a href="confidentiality.html">Confidentiality</a></li>
-            <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
-          <ul>
-        </div>
-      </div>
-    </nav>
-    </header>
-    <main>
-      <div class="container">
-        <h1>Confidentiality</h1>
-        <p>
-          Northeastern Counseling Services maintains strict standards of confidentiality. The law protects
-          the relationship between a client and a psychotherapist. We will not release any records from your
-          counseling experience at our practice, or discuss your case with anyone unless you give us your
-          explicit written consent. Exceptions to this include:
-        </p>
-        <ul>
-          <li>Suspected child abuse, dependent adult abuse or elder abuse for which we are required by law to
-            report any evidence or suspicion this to the ​appropriate authorities immediately.</li>
-          <li>If a client is threatening serious bodily harm to another person(s). We must notify the police
-            and the intended victim.</li>
-          <li>If a client intends to harm himself or herself, we will make every effort to enlist their
-            cooperation in ensuring their safety.</li>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light navbar-custom">
+      <a class="navbar-brand" href="index.html"><img class="d-none d-sm-inline-block" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-main">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
+          <li class="nav-item active"><a class="nav-link" href="confidentiality.html">Confidentiality<span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
+          <li class="nav-item"><a class="nav-link" href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
         </ul>
       </div>
-    </main>
-    <footer class="footer">
-      <div class="container wrap text-center">
-        <p class="text-muted">
-          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
-        </p>
-      </div>
-    </footer>
+    </nav>
+  </header>
+  <main>
+    <div class="container">
+      <h1>Confidentiality</h1>
+      <p>
+        Northeastern Counseling Services maintains strict standards of confidentiality. The law protects
+        the relationship between a client and a psychotherapist. We will not release any records from your
+        counseling experience at our practice, or discuss your case with anyone unless you give us your
+        explicit written consent. Exceptions to this include:
+      </p>
+      <ul>
+        <li>Suspected child abuse, dependent adult abuse or elder abuse for which we are required by law to
+          report any evidence or suspicion this to the ​appropriate authorities immediately.</li>
+        <li>If a client is threatening serious bodily harm to another person(s). We must notify the police
+          and the intended victim.</li>
+        <li>If a client intends to harm himself or herself, we will make every effort to enlist their
+          cooperation in ensuring their safety.</li>
+      </ul>
+    </div>
+  </main>
+  <footer class="footer bg-light">
+    <div class="container wrap text-center">
+      <p class="text-muted-custom">
+        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+      </p>
+    </div>
+  </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
