--- a/contact-us.html
+++ b/contact-us.html
@@ -5,106 +5,98 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services has offices located in Pennsylvania and Maryland." />
+  <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
-  <div>
-    <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="common-questions.html">Common Questions</a></li>
-            <li><a href="confidentiality.html">Confidentiality</a></li>
-            <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
-            <li class="active"><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
-          <ul>
-        </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light navbar-custom shadow-sm">
+      <a class="navbar-brand" href="index.html"><img class="d-none d-sm-inline-block" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-main">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
+          <li class="nav-item"><a class="nav-link" href="confidentiality.html">Confidentiality</a></li>
+          <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
+          <li class="nav-item active"><a class="nav-link" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
+          <li class="nav-item"><a class="nav-link" href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
+        </ul>
       </div>
     </nav>
-    </header>
-    <main>
-      <div class="container">
-        <h1>Contact Us</h1>
-        <p>
-          You may leave us a confidential voice mail or send an email. Please remember that email is
-          not a confidential method of communication, so security cannot be guarenteed and delivery times
-          are often unreliable. In order to protect your confidentiality, we do not communicate about
-          anything clinical over email. Please do not use email to contact us in an emergency and be
-          careful not to include any sensitive material.
-        </p>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h2>PA Office Address</h2>
-            <p>
-              5021 East Trindle Rd
-            <br>
-              Mechanicsburg, PA 17050
-            </p><p>
-              Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
-            </p><p>
-              Fax: 717-202-2590
-            </p><p>
-              <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
-            </p>
-          </div>
-          <div class="col-md-6">
-              <iframe width="360" height="310" frameborder="0"
-              src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.225540~-76.972755&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=5021%20E%20Trindle%20Rd%2c%20Mechanicsburg%2c%20PA%2017050~~40.225540~-76.972755" scrolling="no"></iframe>
-          </div>
+  </header>
+  <main>
+    <div class="container">
+      <h1>Contact Us</h1>
+      <p>
+        You may leave us a confidential voice mail or send an email. Please remember that email is
+        not a confidential method of communication, so security cannot be guarenteed and delivery times
+        are often unreliable. In order to protect your confidentiality, we do not communicate about
+        anything clinical over email. Please do not use email to contact us in an emergency and be
+        careful not to include any sensitive material.
+      </p>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>PA Office Address</h2>
+          <p>
+            5021 East Trindle Rd
+          <br>
+            Mechanicsburg, PA 17050
+          </p><p>
+            Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
+          </p><p>
+            Fax: 717-202-2590
+          </p><p>
+            <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
+          </p>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <h2>MD Office Address</h2>
-            <p>
-              3355 St. John's Ln
-            <br>
-              Suite F
-            <br>
-              Ellicott City, MD 21045
-            </p><p>
-              Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
-            </p><p>
-              Fax: 717-202-2590
-            </p><p>
-              <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
-            </p>
-          </div>
-          <div class="col-md-6">
+        <div class="col-md-6">
             <iframe width="360" height="310" frameborder="0"
-              src="https://www.bing.com/maps/embed?h=310&w=360&cp=39.278050~-76.825120&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3355%20St.%20John%27s%20Ln%20Suite%20F%20Ellicott%20City%2C%20MD%2021045~~39.278050~-76.825120" scrolling="no"></iframe>
-          </div>
+            src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.225540~-76.972755&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=5021%20E%20Trindle%20Rd%2c%20Mechanicsburg%2c%20PA%2017050~~40.225540~-76.972755" scrolling="no"></iframe>
         </div>
-    </main>
-    <footer class="footer">
-      <div class="container wrap text-center">
-        <p class="text-muted">
-          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
-        </p>
       </div>
-    </footer>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>MD Office Address</h2>
+          <p>
+            3355 St. John's Ln
+          <br>
+            Suite F
+          <br>
+            Ellicott City, MD 21045
+          </p><p>
+            Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
+          </p><p>
+            Fax: 717-202-2590
+          </p><p>
+            <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
+          </p>
+        </div>
+        <div class="col-md-6">
+          <iframe width="360" height="310" frameborder="0"
+            src="https://www.bing.com/maps/embed?h=310&w=360&cp=39.278050~-76.825120&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3355%20St.%20John%27s%20Ln%20Suite%20F%20Ellicott%20City%2C%20MD%2021045~~39.278050~-76.825120" scrolling="no"></iframe>
+        </div>
+      </div>
+  </main>
+  <footer class="footer bg-light">
+    <div class="container wrap text-center">
+      <p class="text-muted-custom">
+        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+      </p>
+    </div>
+  </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
