--- a/index.html
+++ b/index.html
@@ -6,112 +6,102 @@
   <!--
   <meta name="keywords" content"counseling, therapist, psychologist, social work, couples, mental, marriage, family, grief, eating disorder, binge, anorexia, bulimia, cognitive behavioral therapy" />
   -->
-  <meta name="msvalidate.01" content="9BF1CCD70CD1124D689D3B47D9AE4BFF" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services provides cognitive behavior health therapy
     and specializes in treatment of eating disorders." />
+  <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
-  <div>
-    <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">Northeastern Counseling Services</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="common-questions.html">Common Questions</a></li>
-            <li><a href="confidentiality.html">Confidentiality</a></li>
-            <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
-          <ul>
-        </div>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top bg-light navbar-custom shadow-sm">
+      <a class="navbar-brand" href="index.html">Northeastern Counseling Services<span class="sr-only">(current)</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-main">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
+          <li class="nav-item"><a class="nav-link" href="confidentiality.html">Confidentiality</a></li>
+          <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
+          <li class="nav-item"><a class="nav-link" href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
+        </ul>
       </div>
     </nav>
-    </header>
-    <main>
-      <div class="container">
-        <div class="jumbotron">
-          <img class="img-responsive" src="images/400dpiLogo.png" alt="Trees"/>
-          <h1>Northeastern Counseling Services</h1>
-        </div>
+  </header>
+  <main>
+    <div class="container">
+      <div class="jumbotron">
+        <img class="img-fluid" src="images/400dpiLogo.png" alt="Trees"/>
+        <h1>Northeastern Counseling Services</h1>
+      </div>
 <!--
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!> Indicators <-!>
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-          </ol>
-          <!> Wrapper for slides <-!>
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="images/Logo.png" alt="Logo" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="images/01.jpg" alt="Exterior" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="images/02.jpg" alt="Interior 1" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="images/03.jpg" alt="Interior 2" style="width:100%;">
-            </div>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!> Indicators <-!>
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+        <!> Wrapper for slides <-!>
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="images/Logo.png" alt="Logo" style="width:100%;">
           </div>
-          <!> Left and right controls <-!>
-          <!>
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          <-!>
+          <div class="item">
+            <img src="images/01.jpg" alt="Exterior" style="width:100%;">
+          </div>
+          <div class="item">
+            <img src="images/02.jpg" alt="Interior 1" style="width:100%;">
+          </div>
+          <div class="item">
+            <img src="images/03.jpg" alt="Interior 2" style="width:100%;">
+          </div>
         </div>
+        <!> Left and right controls <-!>
+        <!>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        <-!>
+      </div>
 -->
-        <article style="padding-top: 30px;">
-          <p>
-          At Northeastern Counseling Services we understand that life can sometimes be overwhelming,
-          stressful, and challenging. From experiencing everyday stressors to feelings of anxiety and
-          depression- our skilled and experienced licensed counselors can help provide you with the
-          client-centered, tailored support you need to achieve emotional and behavioral well-being.
-          </p><p>
-          At Northeastern Counseling Services we pride ourselves on taking a complete and thoughtful
-          approach to your emotional and behavioral wellness goals. We look forward to assisting you
-          in enhancing the life you ideally imagine living.
-          </p>
-        </article>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container wrap text-center">
-        <p class="text-muted">
-          5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-          3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+      <article style="padding-top: 30px;">
+        <p>
+        At Northeastern Counseling Services we understand that life can sometimes be overwhelming,
+        stressful, and challenging. From experiencing everyday stressors to feelings of anxiety and
+        depression- our skilled and experienced licensed counselors can help provide you with the
+        client-centered, tailored support you need to achieve emotional and behavioral well-being.
+        </p><p>
+        At Northeastern Counseling Services we pride ourselves on taking a complete and thoughtful
+        approach to your emotional and behavioral wellness goals. We look forward to assisting you
+        in enhancing the life you ideally imagine living.
         </p>
-      </div>
-    </footer>
+      </article>
+    </div>
+  </main>
+  <footer class="footer bg-light">
+    <div class="container wrap text-center">
+      <p class="text-muted-custom">
+        5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
+        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+      </p>
+    </div>
+  </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
