--- a/resources.html
+++ b/resources.html
@@ -6,109 +6,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services welcomes you to visit additional resources on
     suicide prevention, eating disorders, anxiety and depression." />
+  <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
 <body>
-  <div>
-    <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"><img class="hidden-xs" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="common-questions.html">Common Questions</a></li>
-            <li><a href="confidentiality.html">Confidentiality</a></li>
-            <li><a href="rates-and-insurance.html">Rates and Insurance</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-            <li class="active"><a href="resources.html">Resources</a></li>
-            <li><a href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
-          <ul>
-        </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light navbar-custom shadow-sm">
+      <a class="navbar-brand" href="index.html"><img class="d-none d-sm-inline-block" alt="trees" src="images/44Logo_notext.png">Northeastern Counseling Services</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-main">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
+          <li class="nav-item"><a class="nav-link" href="confidentiality.html">Confidentiality</a></li>
+          <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+          <li class="nav-item active"><a class="nav-link" href="resources.html">Resources<span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="eating-disorder-myths.html">Eating Disorder Myths</a></li>
+        </ul>
       </div>
     </nav>
-    </header>
-    <main>
-      <div class="container">
-        <h1>Resources</h1>
-        <p>
-          <em>The following links are listed to provide you with additional online mental health care information
-          and counseling resources.
-          </em>
-        </p>
-        <p>
-          Suicide Prevention Resources
-          <ul>
-            <li><a href="http://www.suicidepreventionlifeline.org">National Suicide Prevention Lifeline</a>
-              (<a href="tel:8002738255">1-800-273-TALK(8255)</a> Available 24 hours everyday)<br></li>
-            <li><a href="https://www.sprc.org">Suicide Prevention Resource Center</a><br></li>
-            <li><a href="https://www.samhsa.gov/suicide-prevention">SAMHSA- Suicide Prevention</a><br></li>
-            <li><a href="https://www.nami.org/Get-Involved/Awareness-Events/Suicide-Prevention-Awareness-Month">National Alliance on Mental Health- Suicide Prevention</a><br></li>
-          </ul>
-        </p>
-        <p>
-          <a href="http://www.nationaleatingdisorders.org/">National Eating Disorders Association</a><br>
-          <ul>
-            <li><a href="https://www.nationaleatingdisorders.org/warning-signs-and-symptoms">Warning signs and symptoms</a></li>
-            <li><a href="https://www.nationaleatingdisorders.org/screening-tool">Screening Tool</a></li>
-            <li><a href="https://www.nationaleatingdisorders.org/learn/help/caregivers">How to help a loved one</a></li>
-            <li><a href="https://www.nationaleatingdisorders.org/sharing-concerns-about-your-eating-behaviors">How do I open up in treatment?</a></li>
-            <li><a href="https://www.nationaleatingdisorders.org/evaluation-and-diagnosis">What's the first step</a></li>
-            <li><a href="https://www.nationaleatingdisorders.org/treatment">What can I expect</a></li>
-            <li><a href="https://www.nationaleatingdisorders.org/sites/default/files/nedaw18/1.%20ParentToolkit.pdf">Parent toolkit</a></li>
-          </ul>
-        </p>
-        <p>
-          Other Eating Disorder Resources
-          <ul>
-            <li><a href="http://www.aedweb.org">Academy for Eating Disorders</a></li>
-            <li><a href="http://www.anad.org">National Association of Anorexia Nervosa & Related Disorders</a></li>
-            <li><a href="http://www.bedaonline.com">Binge Eating Disorder Association</a></li>
-            <li><a href="http://www.eatingdisorderscoalition.org">Eating Disorders Coalition</a></li>
-            <li><a href="http://www.mengetedstoo.co.uk/">Men Get Eating Disorders Too</a></li>
-            <li><a href="http://www.nationaleatingdisorders.org/">National Eating Disorder Association</a></li>
-            <li><a href="https://www.eatingdisorderhope.com">Eating Disorder Hope</a></li>
-          </ul>
-        </p>
-        <p>
-          Anxiety and Depression Resources
-          <ul>
-            <li><a href="https://www.nami.org">National Alliance on Mental Illness</a>
-              (<a href="tel:8009506264">1-800-950-NAMI(6264)</a>)<br></li>
-            <li><a href="https://members.adaa.org/page/FATMain">Anxiety and Depression Association of America</a>
-              (<a href="tel:2404851001">1-240-485-1001</a>)<br></li>
-            <li><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health</a>
-              (<a href="tel:8666156464">1-866-615-6464</a>)<br></li>
-            </li>
-          </ul>
-        </p>
-        <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
+  </header>
+  <main>
+    <div class="container">
+      <h1>Resources</h1>
+      <p>
+        <em>The following links are listed to provide you with additional online mental health care information
+        and counseling resources.
+        </em>
       </p>
+      <p>
+        Suicide Prevention Resources
+        <ul>
+          <li><a href="http://www.suicidepreventionlifeline.org">National Suicide Prevention Lifeline</a>
+            (<a href="tel:8002738255">1-800-273-TALK(8255)</a> Available 24 hours everyday)<br></li>
+          <li><a href="https://www.sprc.org">Suicide Prevention Resource Center</a><br></li>
+          <li><a href="https://www.samhsa.gov/suicide-prevention">SAMHSA- Suicide Prevention</a><br></li>
+          <li><a href="https://www.nami.org/Get-Involved/Awareness-Events/Suicide-Prevention-Awareness-Month">National Alliance on Mental Health- Suicide Prevention</a><br></li>
+        </ul>
+      </p>
+      <p>
+        <a href="http://www.nationaleatingdisorders.org/">National Eating Disorders Association</a><br>
+        <ul>
+          <li><a href="https://www.nationaleatingdisorders.org/warning-signs-and-symptoms">Warning signs and symptoms</a></li>
+          <li><a href="https://www.nationaleatingdisorders.org/screening-tool">Screening Tool</a></li>
+          <li><a href="https://www.nationaleatingdisorders.org/learn/help/caregivers">How to help a loved one</a></li>
+          <li><a href="https://www.nationaleatingdisorders.org/sharing-concerns-about-your-eating-behaviors">How do I open up in treatment?</a></li>
+          <li><a href="https://www.nationaleatingdisorders.org/evaluation-and-diagnosis">What's the first step</a></li>
+          <li><a href="https://www.nationaleatingdisorders.org/treatment">What can I expect</a></li>
+          <li><a href="https://www.nationaleatingdisorders.org/sites/default/files/nedaw18/1.%20ParentToolkit.pdf">Parent toolkit</a></li>
+        </ul>
+      </p>
+      <p>
+        Other Eating Disorder Resources
+        <ul>
+          <li><a href="http://www.aedweb.org">Academy for Eating Disorders</a></li>
+          <li><a href="http://www.anad.org">National Association of Anorexia Nervosa & Related Disorders</a></li>
+          <li><a href="http://www.bedaonline.com">Binge Eating Disorder Association</a></li>
+          <li><a href="http://www.eatingdisorderscoalition.org">Eating Disorders Coalition</a></li>
+          <li><a href="http://www.mengetedstoo.co.uk/">Men Get Eating Disorders Too</a></li>
+          <li><a href="http://www.nationaleatingdisorders.org/">National Eating Disorder Association</a></li>
+          <li><a href="https://www.eatingdisorderhope.com">Eating Disorder Hope</a></li>
+        </ul>
+      </p>
+      <p>
+        Anxiety and Depression Resources
+        <ul>
+          <li><a href="https://www.nami.org">National Alliance on Mental Illness</a>
+            (<a href="tel:8009506264">1-800-950-NAMI(6264)</a>)<br></li>
+          <li><a href="https://members.adaa.org/page/FATMain">Anxiety and Depression Association of America</a>
+            (<a href="tel:2404851001">1-240-485-1001</a>)<br></li>
+          <li><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health</a>
+            (<a href="tel:8666156464">1-866-615-6464</a>)<br></li>
+          </li>
+        </ul>
+      </p>
+      <p><em>Note: NCS is not responsible for the content, claims or representations of the listed sites.</em></p>
     </div>
   </main>
-  <footer class="footer">
+  <footer class="footer bg-light">
     <div class="container wrap text-center">
-      <p class="text-muted">
+      <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
         3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
       </p>
     </div>
   </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
